cip-macros/tests/ui/cip_class_missing_name.stderr
error: Missing field `name`
  --> tests/ui/cip_class_missing_name.rs:19:10
   |
19 | #[derive(CipClass)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `CipClass` (in Nightly builds, run with -Z macro-backtrace for more info)
